Search by path and save state, max img 100%

--- a/lib/pages/home/home.html
+++ b/lib/pages/home/home.html
@@ -13,7 +13,7 @@
 
 <div class="container">
   <form>
-    <input class="input-large" type="text" placeholder="Search...">
+    <input class="input-large search" type="text" placeholder="Search...">
   </form>
 
   <div class="outlet"></div>
