Added in ability to see/search commits

--- a/lib/pages/repository/repository.html
+++ b/lib/pages/repository/repository.html
@@ -1,8 +1,9 @@
 <div class="header header-logged-in true" role="banner">
   <div class="container clearfix">
     <div>
-      <a href="#/"><span class="octicon octicon-playback-rewind"></span> Return to Repositories</a> |
-      <span class="count">{{ model.get 'name' }}</span>
+      <a href="#/">All repositories</a>
+      <span class="octicon octicon-chevron-right sep"></span>
+      <a href="#/repository/{{ model.id }}"><span class="count">{{ model.get 'name' }}</span></a>
     </div>
   </div>
 </div>
@@ -12,18 +13,18 @@
     <div class="three-fourths column">
       <nav class="menu files">
         <a class="menu-item commit_message">
-          {{ model.message }}
+          {{ model.commit.oneline }}
         </a>
         <a class="menu-item commit_details">
-          <img class="avatar avatar-small" src="http://www.gravatar.com/avatar/{{ model.md5 }}" width="20" height="20">
-          {{ model.attributes.commit.author.name }} <span class="commit_date">authored {{ model.attributes.commit.date }}</span>
+          <img class="avatar avatar-small" src="http://www.gravatar.com/avatar/{{ model.commit.hash }}" width="20" height="20">
+          {{ model.commit.attributes.author.name }} <span class="commit_date">authored {{ model.commit.get 'date' }}</span>
           <span class="latest_commit">
-            latest commit <span class="commit_sha">{{ model.attributes.commit.sha|slice 0 10 }}</span>
+            latest commit <span class="commit_sha">{{ model.commit.attributes.sha|slice 0 10 }}</span>
             <span class="octicon octicon-clippy"></span>
           </span>
         </a>
         {%each model.get 'tree' as entry%}
-        <a class="menu-item" href="#">
+        <a class="menu-item" href="#/repository/{{ model.get 'id' }}/blob/{{ model.get 'branch' }}/{{ entry.path }}">
           {%if entry.isDirectory%}
           <span class="octicon octicon-file-directory"></span>
           {%else%}
@@ -59,7 +60,8 @@
           <span class="counter">{{ model.get 'notes' }}</span>
           Notes
         </a>
-        <a class="menu-item" href="#">
+        <a class="menu-item"
+          href="#/repository/{{ model.get 'id' }}/{{ model.get 'branch' }}/commits">
           <span class="octicon octicon-git-commit"></span>
           <span class="counter">{{ model.get 'commits' }}</span>
           Commits
