--- a/lib/pages/commits/commits.html
+++ b/lib/pages/commits/commits.html
@@ -15,6 +15,8 @@
     <input class="input-large search" type="text" placeholder="Search...">
   </form>
 
+  <div class="blankslate" id="commit_timeline"></div>
+
   <div class="columns">
     <div class="single-column outlet"></div>
   </div>
