--- a/lib/pages/repository/repository.html
+++ b/lib/pages/repository/repository.html
@@ -1,9 +1,9 @@
 <div class="header header-logged-in true" role="banner">
   <div class="container clearfix">
     <div>
-      <a href="#/">All repositories</a>
+      <a href="#">All repositories</a>
       <span class="octicon octicon-chevron-right sep"></span>
-      <a href="#/repository/{{ model.id }}"><span class="count">{{ model.get 'name' }}</span></a>
+      <a href="#repository/{{ model.id }}"><span class="count">{{ model.get 'name' }}</span></a>
     </div>
   </div>
 </div>
@@ -24,7 +24,7 @@
           </span>
         </div>
         {%each model.get 'tree' as entry%}
-        <div class="menu-item" href="#/repository/{{ model.get 'id' }}/blob/{{ model.get 'branch' }}/{{ entry.path }}">
+        <div class="menu-item" href="#repository/{{ model.get 'id' }}/blob/{{ model.get 'branch' }}/{{ entry.path }}">
           <div class="container">
             <div class="columns">
               <div class="column one-third">
@@ -73,7 +73,7 @@
           Notes
         </a>
         <a class="menu-item"
-          href="#/repository/{{ model.get 'id' }}/{{ model.get 'branch' }}/commits">
+          href="#repository/{{ model.get 'id' }}/{{ model.get 'branch' }}/commits">
           <span class="octicon octicon-git-commit"></span>
           <span class="counter">{{ model.get 'commits' }}</span>
           Commits
