Add branches count. Add getAllBranches function. Add branches and count to repository.html template.

--- a/lib/pages/repository/repository.html
+++ b/lib/pages/repository/repository.html
@@ -63,6 +63,11 @@
           Code
         </a>
         <a class="menu-item" href="#">
+          <span class="octicon octicon-git-branch"></span>
+          <span class="counter">{{ model.get 'branches' }}</span>
+          Branches
+        </a>
+        <a class="menu-item" href="#">
           <span class="octicon octicon-tag"></span>
           <span class="counter">{{ model.get 'tags' }}</span>
           Tags
