--- a/lib/pages/repository/repository.html
+++ b/lib/pages/repository/repository.html
@@ -66,7 +66,7 @@
           Notes
         </a>
         <a class="menu-item"
-          href="#repository/{{ model.get 'id' }}/{{ model.get 'branch' }}/commits">
+          href="#repository/{{ model.id }}/{{ model.get 'branch' }}/commits">
           <span class="octicon octicon-git-commit"></span>
           <span class="counter">{{ model.get 'commits' }}</span>
           Commits
