--- a/lib/pages/home/home.html
+++ b/lib/pages/home/home.html
@@ -3,6 +3,10 @@
     <button class="btn btn-sm btn-primary sync" type="button">
       <span class="octicon octicon-sync"></span>
     </button>
+
+    <span class="state">{{ p2p.id }}</span>
+    <strong class="label">Peer ID</strong>
+
     <h4><span class="count">{{ collection.length }}</span> repositories found</h4>
   </div>
 </div>
