--- a/lib/pages/home/home.html
+++ b/lib/pages/home/home.html
@@ -1,6 +1,10 @@
 <div class="header header-logged-in true" role="banner">
   <div class="container clearfix">
-    <button class="btn btn-sm btn-primary sync" type="button">
+    <a class="btn btn-primary btn-block btn-social btn-github">
+      <i class="fa fa-github"></i> Sign in with GitHub
+    </a>
+
+    <button class="btn btn-primary sync" type="button">
       <span class="octicon octicon-sync"></span>
     </button>
 
@@ -8,6 +12,7 @@
     <strong class="label">Peer ID</strong>
 
     <h4><span class="count">{{ collection.length }}</span> repositories found</h4>
+
   </div>
 </div>
 
