--- a/lib/pages/file/file.html
+++ b/lib/pages/file/file.html
@@ -1,17 +1,4 @@
-<div class="header header-logged-in true" role="banner">
-  <div class="container clearfix">
-    <a class="btn btn-primary btn-block btn-social btn-github">
-      <i class="fa fa-github"></i> Sign in with GitHub
-    </a>
-
-    <button class="btn btn-primary sync" type="button">
-      <span class="octicon octicon-sync"></span>
-    </button>
-
-    {%if p2p.id%}<span class="state">{{ p2p.id }}</span>{%endif%}
-    <strong class="label">&laquo; Peer ID</strong>
-  </div>
-</div>
+{%partial /lib/partials/header .%}
 
 <div class="container clearfix">
   <div>
@@ -36,7 +23,7 @@
     <div class="single-column column">
       <nav class="menu files">
         <a class="menu-item commit_message">
-          {{ model.get 'name' }}/{{ file }}
+          {{ model.attributes.name|buttons }}<span class="sep">/</span>{{ file|buttons true}}
         </a>
         <div class="menu-item commit_details">
           <img class="avatar avatar-small" src="http://www.gravatar.com/avatar/{{ model.commit.hash }}" width="20" height="20">
