--- a/lib/pages/home/home.html
+++ b/lib/pages/home/home.html
@@ -1,17 +1,4 @@
-<div class="header header-logged-in true" role="banner">
-  <div class="container clearfix">
-    <a class="btn btn-primary btn-block btn-social btn-github">
-      <i class="fa fa-github"></i> Sign in with GitHub
-    </a>
-
-    <button class="btn btn-primary sync" type="button">
-      <span class="octicon octicon-sync"></span>
-    </button>
-
-    {%if p2p.id%}<span class="state">{{ p2p.id }}</span>{%endif%}
-    <strong class="label">&laquo; Peer ID</strong>
-  </div>
-</div>
+{%partial /lib/partials/header .%}
 
 <div class="container">
   <center>
