--- a/lib/pages/repository/repository.html
+++ b/lib/pages/repository/repository.html
@@ -1,17 +1,4 @@
-<div class="header header-logged-in true" role="banner">
-  <div class="container clearfix">
-    <a class="btn btn-primary btn-block btn-social btn-github">
-      <i class="fa fa-github"></i> Sign in with GitHub
-    </a>
-
-    <button class="btn btn-primary sync" type="button">
-      <span class="octicon octicon-sync"></span>
-    </button>
-
-    {%if p2p.id%}<span class="state">{{ p2p.id }}</span>{%endif%}
-    <strong class="label">&laquo; Peer ID</strong>
-  </div>
-</div>
+{%partial /lib/partials/header .%}
 
 <div class="container clearfix">
   <div>
@@ -35,17 +22,6 @@
   <div class="columns">
     <div class="three-fourths column">
       <nav class="menu files">
-        <a class="menu-item commit_message">
-          {{ model.commit.oneline }}
-        </a>
-        <div class="menu-item commit_details">
-          <img class="avatar avatar-small" src="http://www.gravatar.com/avatar/{{ model.commit.hash }}" width="20" height="20">
-          {{ model.commit.attributes.author.name }} <span class="commit_date">authored {{ model.commit.get 'date' }}</span>
-          <span class="latest_commit">
-            latest commit <span class="commit_sha">{{ model.commit.attributes.sha|slice 0 10 }}</span>
-            <span class="octicon octicon-clippy"></span>
-          </span>
-        </div>
 
         <div class="outlet"></div>
       </nav>
