Significantly better README styles from GitHub

--- a/lib/pages/repository/repository.html
+++ b/lib/pages/repository/repository.html
@@ -29,7 +29,7 @@
       <nav class="menu">
         <span class="menu-heading">README.md</span>
 
-        <span class="menu-item readme">
+        <span class="menu-item readme markdown-body">
         {{{ model.get 'readme' }}}
         </span>
       </nav>
