Cha-cha-chaaaanges

--- a/lib/pages/repository/repository.html
+++ b/lib/pages/repository/repository.html
@@ -1,4 +1,4 @@
-{%partial /lib/partials/header .%}
+{%partial partials/header .%}
 
 <div class="container clearfix">
   <div>
@@ -17,6 +17,7 @@
         <span class="down octicon octicon-triangle-down"></span>
       </a>
       <a href="#" class="tabnav-tab">Unstaged</a>
+      <a href="#" class="tabnav-tab">Stashed</a>
     </nav>
   </div>
   <div class="columns">
