Huge commit, lots of changes
- Removed custom AMD loader in favor of Browserify
- Started converting to ES6
- Removed most of the p2p stuff
- Added `~workdir` and color coded the current status
- Allow ignored files to be shown or hidden

--- a/lib/pages/file/file.html
+++ b/lib/pages/file/file.html
@@ -21,7 +21,7 @@
   </div>
   <div class="columns">
     <div class="single-column column">
-      <nav class="menu files">
+      <nav class="menu show-hidden files">
         <div class="path">
         {%each model.file.path|buttons as path%}
           {%if path.isFile%}
