--- a/lib/pages/repository/repository.html
+++ b/lib/pages/repository/repository.html
@@ -22,7 +22,7 @@
   </div>
   <div class="columns">
     <div class="three-fourths column">
-      <nav class="menu files">
+      <nav class="menu {%if collection.showHidden%}show-hidden{%endif%} files">
 
         <div class="outlet"></div>
       </nav>
